Add py.typed so the package becomes type-safe.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
-include LICENSE
-include README.md
-global-include chromedriver
+graft chromedriver_py_auto
+include LICENSE README.md
+prune venv
+global-exclude __pycache__
+global-exclude *.py[co]
